Release images: Fix alignment of smaller-width images in VN covers tab

--- a/css/v2.css
+++ b/css/v2.css
@@ -381,7 +381,10 @@ div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid var
 .vncovers {
     > div {
         display: flex; max-width: 900px; margin: 0 auto 20px auto;
-        > :first-child { flex: 0; width: 256px; }
+        > :first-child {
+           flex: 0 0 256px;
+           > .imghover { margin: 0 0 0 auto }
+        }
         > :last-child { flex: 1; padding-left: 10px; }
     }
 }
